endpoints: update comment
